[gd_scene load_steps=17 format=3 uid="uid://c8yqkack2d8mb"]

[ext_resource type="Script" path="res://Other/pick_up.gd" id="1_3a3by"]
[ext_resource type="ArrayMesh" uid="uid://d17c020bppr2u" path="res://Assets/OBJ/Props_Vessel.obj" id="2_b4twp"]
[ext_resource type="Texture2D" uid="uid://b2x1b5cq8g81n" path="res://Assets/Particle/light_01.png" id="3_y21kl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kxepi"]
radius = 0.504623

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xq5hs"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_y21kl")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_hxpxr"]
colors = PackedColorArray(0, 0, 0, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o05eo"]
gradient = SubResource("Gradient_hxpxr")

[sub_resource type="Curve" id="Curve_g3em6"]
_data = [Vector2(0, 0.0090909), 0.0, 1.08951, 0, 0, Vector2(1, 0), -5.8394, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cpu5l"]
curve = SubResource("Curve_g3em6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_upp24"]
lifetime_randomness = 0.1
gravity = Vector3(0, 0, 0)
angle_min = -180.0
angle_max = 180.0
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_cpu5l")
color_ramp = SubResource("GradientTexture1D_o05eo")

[sub_resource type="QuadMesh" id="QuadMesh_txq1g"]

[sub_resource type="Gradient" id="Gradient_rglo1"]
colors = PackedColorArray(0, 0, 0, 1, 1, 0.423529, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0o6i7"]
gradient = SubResource("Gradient_rglo1")

[sub_resource type="Curve" id="Curve_dyrlp"]
_data = [Vector2(0, 0.0090909), 0.0, 1.08951, 0, 0, Vector2(1, 0), -5.8394, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_12n4k"]
curve = SubResource("Curve_dyrlp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q8b3s"]
lifetime_randomness = 0.1
gravity = Vector3(0, 0, 0)
angle_min = -180.0
angle_max = 180.0
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_12n4k")
color_ramp = SubResource("GradientTexture1D_0o6i7")

[node name="PickUp" type="Node3D"]
script = ExtResource("1_3a3by")

[node name="PropsVessel" type="MeshInstance3D" parent="."]
transform = Transform3D(1.14907, -0.964183, 0, 0.964183, 1.14907, 0, 0, 0, 1.5, 0.384737, 0.641079, 0)
mesh = ExtResource("2_b4twp")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844661, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_kxepi")

[node name="ParticlesHeal" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 2.08616e-07, 0, -2.08616e-07, 1, 0, 0, 0, 1, 2.23517e-07, 1.09516, 0)
material_override = SubResource("StandardMaterial3D_xq5hs")
emitting = false
amount = 15
lifetime = 5.0
fixed_fps = 15
visibility_aabb = AABB(-0.878606, -0.86464, -0.877996, 1.75721, 1.72928, 1.75599)
process_material = SubResource("ParticleProcessMaterial_upp24")
draw_pass_1 = SubResource("QuadMesh_txq1g")

[node name="ParticlesJump" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 2.08616e-07, 0, -2.08616e-07, 1, 0, 0, 0, 1, 2.23517e-07, 1.09516, 0)
material_override = SubResource("StandardMaterial3D_xq5hs")
emitting = false
amount = 15
lifetime = 5.0
fixed_fps = 15
visibility_aabb = AABB(-0.883493, -0.849575, -0.872203, 1.76699, 1.69915, 1.74441)
process_material = SubResource("ParticleProcessMaterial_q8b3s")
draw_pass_1 = SubResource("QuadMesh_txq1g")

[connection signal="area_entered" from="Area3D" to="." method="_on_entered"]
